# aporia-blitz

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  readme.md
.githooks/: pre-commit
.github/workflows/: build.yml  emscripten.yml
cmake/: FindGLFW3.cmake  FindMagic_Enum.cmake  Findgl3w.cmake  Findglfw3.cmake  Findglm.cmake  Findimgui.cmake  Findnlohmann_json.cmake  Findsokol.cmake  Findspdlog.cmake  Findstb.cmake  Findzlib.cmake
core/: CMakeLists.txt  animation_manager.cpp  animation_manager.hpp  aporia.hpp  aporia_animation.cpp  aporia_animation.hpp  aporia_animations.cpp  aporia_animations.hpp  aporia_assets.cpp  aporia_assets.hpp  aporia_audio.cpp  aporia_audio.hpp  aporia_camera.cpp  aporia_camera.hpp  aporia_collision.cpp  aporia_collision.hpp  aporia_config.cpp  aporia_config.hpp  aporia_debug.cpp  aporia_debug.hpp  aporia_entity.cpp  aporia_entity.hpp  aporia_entry.hpp  aporia_fonts.cpp  aporia_fonts.hpp  aporia_game.cpp  aporia_game.hpp  aporia_hash_table.hpp  aporia_input.cpp  aporia_input.hpp  aporia_inputs.cpp  aporia_inputs.hpp  aporia_memory.cpp  aporia_memory.hpp  aporia_parser.cpp  aporia_parser.hpp  aporia_particles.cpp  aporia_particles.hpp  aporia_pch.hpp  aporia_rendering.cpp  (+74 more)
core/components/: circular.hpp  color.hpp  linear2d.hpp  rectangular.hpp  texture.hpp  transform2d.hpp
core/configs/: all_configs.hpp  animation_config.hpp  audio_config.hpp  camera_config.hpp  shader_config.hpp  texture_config.hpp  window_config.hpp
core/debug/: asserts.hpp  break.hpp  logger.cpp  logger.hpp
core/editor/: aporia_commandline.cpp  aporia_editor.cpp  aporia_editor.hpp
core/graphics/: camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  circle2d.hpp  common.hpp  font.hpp  framebuffer.cpp  framebuffer.hpp  group.hpp  image.cpp  image.hpp  index_buffer.cpp  index_buffer.hpp  light.hpp  line2d.hpp  opengl.hpp  rectangle2d.hpp  render_queue.hpp  renderer.cpp  renderer.hpp  renderer.tpp  shader.cpp  shader.hpp  shader_properties.cpp  shader_properties.hpp  sprite.hpp  text.cpp  text.hpp  uniform_buffer.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
core/graphics/animations/: animation.cpp  animation.hpp  animator.cpp  animator.hpp
core/graphics/drawables/: circle2d.cpp  circle2d.hpp  drawables.cpp  group.hpp  line2d.cpp  line2d.hpp  rectangle2d.cpp  rectangle2d.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
core/inputs/: gamepad.hpp  keyboard.hpp  mouse.hpp
core/layers/: imgui_layer.cpp  imgui_layer.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
core/platform/: aporia_opengl.cpp  aporia_opengl.hpp  aporia_os.cpp  aporia_os.hpp  aporia_unix.cpp  aporia_win32.cpp  opengl.hpp  opengl_common.hpp
core/scene/: imgui_layer.hpp  layer_stack.cpp  layer_stack.hpp
core/utils/: color_conversion.hpp  math.hpp  random.hpp  read_file.hpp  shader_parser.hpp  timer.hpp  type_traits.hpp
docs/: branching_model.md  coding_standards.md  commit_messages.md  style_guide.md  tag_versioning.md
emscripten/: build.bat  run.bat  shell.html
example/: CMakeLists.txt  cannon.hpp  credits_scene.hpp  end_scene.hpp  example.cpp  game_scene.hpp  level_manager.hpp  menu_scene.hpp  player.hpp
example/content/: buildings.json  city.xcf  config.json  settings.aporia-config  streets.json  vehicle.json  vehicle.xcf
example/content/fonts/: arial.json
example/content/shaders/: circle.glsl  circle.shader  default.glsl  default.shader  editor_grid.glsl  font.shader  line.shader  postprocessing.glsl  postprocessing.shader  raymarching.glsl  raymarching.shader  shadowcasting.glsl  shadowcasting.shader  vehicle.glsl
misc/: aporia_core.natvis
